Add link to plugin suggestions in index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <h2>Velkommen til Samlet Kommune Juleserver!</h2>
         <p>(Me skal IKKJE ta dragen den 24 desember)</p>
         <a href="#join" class="btn">Bli med</a>
+        <a href="forslag.html" class="btn">Plugin forslag</a>
+
     </div>
 </section>
 
